# My_rust_journey

./: .gitignore  .gitpod.yml
compression_with_rust/: compressed_book
compression_with_rust/src/: main.rs
rust_api_call/: Cargo.toml
rust_api_call/src/: main.rs
rust_async/: Cargo.toml
rust_async/src/: main.rs
rust_basic_auth/: Cargo.toml
rust_basic_auth/src/: main.rs
rust_get_request/: Cargo.toml
rust_get_request/src/: main.rs
rust_mongodb/: Cargo.toml
rust_mongodb/src/: main.rs
rust_sqlite/: Cargo.toml
rust_sqlite/src/: main.rs
rust_unzip/: Cargo.toml
rust_unzip/src/: main.rs
todo_actix/: .env  Cargo.toml  database.sql  docker-compose.yml
todo_actix/src/: config.rs  db.rs  error.rs  handler.rs  main.rs  models.rs  schema.rs
