[package]
name = "todo_actix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web= "4"
actix-rt= "2.2"
serde = {version="1.0.198", features = ["derive"]}
dotenv = "0.15.0"
config = "0.10.1"
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
deadpool-postgres = "0.5.0"
tokio-postgres = "0.5.1"